# konsolid8_Studio

./: .gitignore  README.md  customwave.py  pyproject.toml
docs/chips/: HUBRF8TR.md
docs/chips/HUPUF2X8A/: main.tex
docs/chips/HUPUF2X8A/sections/: 0_title-page.tex  1_introduction.tex  2_architecture-overview.tex  3_functional-modules.tex  4_register-map.tex  5_clock-and-timing.tex  6_performance-characteristics.tex  7_integration-and-usage.tex  8_debugging-and-testing.tex  9_appendices.tex
docs/konsolid8/: APU.md  CATALOG.md  CPU.md  GPU.md  MMU.md
samples/kaa/: melody.kaa  test.kaa
src/apu/: README.md  apu_constants.py
src/apu/kaa/: kaa_compiler.py  kaa_generator.py  kaa_lexer.py
src/gui/: __main__.py  gui.py
src/gui/views/: main_window.py
src/kaapiler/: __main__.py
src/kaapiler/cli/: application.py
src/kaapiler/commands/: __init__.py  command.py
src/kaapiler/commands/kapu8/: 0000_sync_command.py  0001_set_command.py  0011_setchannel_command.py  0111_load_command.py  __init__.py  sync_command.py  wait_command.py  x0000_sync_command.py  x0000_wait_command.py  x0001_set_command.py  x0010_setphase_command.py  x0011_setchannel_command.py  x0100_loop_command.py  x0101_jump_command.py  x0110_save_command.py  x0111_load_command.py
src/kaapiler/core/: __init__.py  kaa_compiler.py
src/kaapiler/parser/: __init__.py  kaa_lexer.py  kaa_parser.py
src/kapusim/: README.md  __main__.py
src/kapusim/cli/: application.py
src/kapusim/core/: apu.py  apu_channel.py  apu_channel_phase.py  apu_channel_state.py
src/kppusim/cli/: application.py
src/studio/: __main__.py
src/studio/core/: application.py  logger.py  settings.py
src/studio/views/dialogs/: about_dialog.py
src/utils/: __init__.py  bytes_utils.py
verilog/BrainForge8/: bus.v  core.v  dma.v  irc.v  irc_tb.out
verilog/BrainForge8/src/: bus.v  dma.v  irc.v  package.v
verilog/BrainForge8/test/: irc.test.v
