[tool.poetry]
name = "konsolid8_studio"
version = "0.1.0"
description = "Development environment for Konsolid8"
readme = "README.md"
authors = ["Cedric van Eetvelde <dhkold@gmail.com>"]
license = "MIT"
packages = [{ include = "gui", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
ply = "^3.11"
pyside6 = "^6.9.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
studio = "gui.__main__:main"
