[tool.poetry]
name = "konsolid8_studio"
version = "0.1.0"
description = "Development environment for Konsolid8"
readme = "README.md"
authors = ["Cedric van Eetvelde <dhkold@gmail.com>"]
license = "MIT"
packages = [
    { include = "studio", from = "src" },
    { include = "kaapiler", from = "src" },
    { include = "kapusim", from = "src" },
    { include = "kppusim", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
ply = "^3.11"
pyside6 = "^6.9.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
studio = "studio.__main__:main" # CLI to run the Konsolid8 Studio GUI
kaapiler = "kaapiler.__main__:main" # CLI to compile KAA (Konsolid8 Audio Assembly) files
kapusim = "kapusim.__main__:main" # CLI to simulate KAPU (Konsolid8 Audio Processing Unit) chip
kppusim = "kppusim.__main__:main" # CLI to simulate KPPU (Konsolid8 Picture Processing Unit) chip